--- a/resources/sass/layouts/_about.scss
+++ b/resources/sass/layouts/_about.scss
@@ -16,7 +16,12 @@
     }
 
     .aboutCtnGrid {
-      @include displayGrid($gap: 1.25rem, $align: flex-start, $justify: space-between, $columns: repeat(3, 1fr));
+      @include displayGrid(
+        $align: flex-start,
+        $gap: 3.25rem 1.25rem,
+        $justify: space-between,
+        $columns: repeat(3, 1fr)
+      );
       @include md {
         grid-template-columns: repeat(2, 1fr);
       }
@@ -28,37 +33,25 @@
         width: 100%;
         height: 100%;
         position: relative;
-        min-height: 13.125rem;
-        padding: 2.3125rem 2.5rem;
-
-        &:before {
-          top: 0;
-          left: 0;
-          z-index: -1;
-          content: '';
-          width: 100%;
-          position: absolute;
-          border-radius: 1.75rem;
-          height: calc(100% - 2rem);
-          border: 0.1875rem solid var(--blue-light);
-          background-color: var(--white-black);
-        }
+        min-height: 11.125rem;
+        padding: 2.3125rem 2.5rem 0;
+        border-radius: 1.75rem 1.75rem 1.75rem 0;
+        border: 0.1875rem solid var(--blue-light);
 
         &:after {
-          top: 0;
-          left: 0;
-          z-index: -1;
           content: '';
-          height: 100%;
+          height: 2rem;
+          bottom: -2.2rem;
+          left: -0.1875rem;
           position: absolute;
           width: calc(100% - 2rem);
-          border: 0.1875rem solid var(--blue-light);
+          border-radius: 0 0 1.75rem 1.75rem;
           background-color: var(--white-black);
-          border-radius: 1.75rem 0 1.75rem 1.75rem;
-          border-right: inherit;
+          border: 0.1875rem solid var(--blue-light);
+          border-top: none;
         }
 
-        & > div {
+        & > div:nth-child(1) {
           @include displayGrid();
 
           & > h2 {
