--- a/resources/sass/layouts/_contact.scss
+++ b/resources/sass/layouts/_contact.scss
@@ -1,6 +1,6 @@
-@import "../constants/mixins";
-@import "../constants/variables";
-@import "../constants/generics";
+@import '../constants/mixins';
+@import '../constants/variables';
+@import '../constants/generics';
 
 .contact {
   z-index: 4;
@@ -24,7 +24,7 @@
         & > h2 {
           padding-bottom: 0.5625rem;
           @include fontStyles(
-            $family: "Poppins-Bold",
+            $family: 'Poppins-Bold',
             $color: var(--dark-light),
             $size: 2.625rem,
             $height: 3.125rem,
@@ -36,7 +36,7 @@
           position: relative;
           padding-bottom: 7rem;
           @include fontStyles(
-            $family: "Nunito-Medium",
+            $family: 'Nunito-Medium',
             $color: var(--dark-light),
             $size: 1.6875rem,
             $height: 2.5rem,
@@ -45,7 +45,7 @@
 
           &::before {
             left: 50%;
-            content: "";
+            content: '';
             width: 3.75rem;
             height: 0.1875rem;
             bottom: 4.1875rem;
@@ -72,7 +72,7 @@
               background-color: inherit;
               border: 0.125rem solid var(--blue-light);
               @include fontStyles(
-                $family: "Nunito-Italic",
+                $family: 'Nunito-Italic',
                 $color: var(--dark-light),
                 $size: 1.3125rem,
                 $height: 1.3125rem
@@ -113,7 +113,7 @@
               }
 
               & > p {
-                @include fontStyles($family: "Nunito-ExtraBold", $color: #cd5a5a, $size: 1.3125rem, $height: 1.875rem);
+                @include fontStyles($family: 'Nunito-ExtraBold', $color: #cd5a5a, $size: 1.3125rem, $height: 1.875rem);
               }
             }
 
@@ -122,10 +122,11 @@
               width: 8.125rem;
               height: 3.4375rem;
               border-radius: 1.75rem;
+              transition: 0.15s ease-in;
               background-color: #005f9b;
               @include displayFlex($align: center, $justify: center);
               @include fontStyles(
-                $family: "Poppins-Bold",
+                $family: 'Poppins-Bold',
                 $color: #dcdcff,
                 $size: 1.375rem,
                 $height: 1.375rem,
@@ -134,6 +135,10 @@
               @include sm {
                 grid-column: 1;
                 margin-left: auto;
+              }
+
+              &:hover {
+                transform: translateY(-0.25rem);
               }
             }
           }
