--- a/resources/sass/layouts/_faq.scss
+++ b/resources/sass/layouts/_faq.scss
@@ -51,39 +51,28 @@
         }
 
         & > ul {
-          @include displayGrid($gap: 1.25rem);
+          @include displayGrid($gap: 3.25rem 1.25rem);
 
           & > li {
             width: 100%;
+            height: 100%;
             position: relative;
             min-height: 8.75rem;
             padding: 2.3125rem 2.5rem;
-
-            &:before {
-              top: 0;
-              left: 0;
-              z-index: -1;
-              content: '';
-              width: 100%;
-              position: absolute;
-              border-radius: 1.75rem;
-              height: calc(100% - 2rem);
-              background-color: var(--white-black);
-              border: 0.1875rem solid var(--blue-light);
-            }
+            border-radius: 1.75rem 1.75rem 1.75rem 0;
+            border: 0.1875rem solid var(--blue-light);
 
             &:after {
-              top: 0;
-              left: 0;
-              z-index: -1;
               content: '';
-              height: 100%;
+              height: 2rem;
+              bottom: -2.2rem;
+              left: -0.1875rem;
               position: absolute;
               width: calc(100% - 2rem);
+              border-radius: 0 0 1.75rem 1.75rem;
               background-color: var(--white-black);
               border: 0.1875rem solid var(--blue-light);
-              border-radius: 1.75rem 0 1.75rem 1.75rem;
-              border-right: inherit;
+              border-top: none;
             }
 
             .faqCtnGridListArrow {
@@ -136,7 +125,9 @@
 }
 
 .faqActive {
-  &:before,
+  border-color: #ffdc80 !important;
+  background-color: #ffdc80 !important;
+
   &:after {
     border-color: #ffdc80 !important;
     background-color: #ffdc80 !important;
