--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -105,6 +105,11 @@
                   & > a > img {
                     width: 1.25rem;
                     height: 1.25rem;
+                    transition: 0.15s ease-in;
+
+                    &:hover {
+                      transform: translateY(-0.25rem);
+                    }
                   }
                 }
               }
@@ -130,28 +135,48 @@
               &:hover {
                 & > a {
                   color: #ffdc80;
-                  font-family: 'Poppins-Bold' !important;
                 }
 
                 & > ul {
-                  display: block;
+                  visibility: visible;
+
+                  & > li {
+                    opacity: 1;
+                    &:nth-child(1),
+                    &:nth-child(2) {
+                      transform: translateY(0);
+                    }
+                  }
                 }
               }
 
               & > ul {
                 left: 50%;
                 bottom: 0;
-                display: none;
+                visibility: hidden;
                 position: absolute;
+                transition: 0.25s ease-in;
                 transform: translate(-50%, 100%);
 
                 & > li {
+                  opacity: 0;
                   width: 10rem;
                   height: 4.375rem;
                   position: relative;
                   border-radius: 0.625rem;
                   margin-bottom: 0.625rem;
                   background-color: #005f9b;
+
+                  &:nth-child(1) {
+                    transform: translateY(-1rem);
+                    transition: 0.25s ease-in 0.1s;
+                  }
+
+                  &:nth-child(2) {
+                    z-index: -1;
+                    transform: translateY(-5rem);
+                    transition: 0.25s ease-in 0.2s;
+                  }
 
                   & > a {
                     height: 100%;
@@ -166,13 +191,17 @@
           .headerFullCtnGridSubShare {
             right: 0;
             bottom: 0;
+            height: 100%;
             position: absolute;
 
             &:hover {
-              & > div {
+              & > div > ul > li {
                 opacity: 1;
-                bottom: -3.25rem;
-                transition: 0.25s ease-in;
+                transform: translateY(-1rem);
+
+                & > a > img {
+                  transform: scale(1);
+                }
               }
             }
 
@@ -195,27 +224,44 @@
             }
 
             & > div {
-              opacity: 0;
-              width: 12.5rem;
-              bottom: -1.5rem;
-              height: 2.1875rem;
+              height: 100%;
+              display: flex;
+              width: 10.4375rem;
               position: relative;
-
-              & > img {
-                width: 100%;
-                height: 100%;
-                position: absolute;
-              }
+              align-items: flex-end;
 
               & > ul {
-                height: 100%;
-                padding-right: 1.75rem;
-                padding-bottom: 0.25rem;
-                @include displayGrid($gap: 1.875rem, $align: flex-end, $justify: flex-end, $columns: repeat(3, auto));
+                @include displayGrid($gap: 1.875rem, $align: center, $justify: center, $columns: repeat(3, auto));
 
-                & > li > a > img {
-                  width: 1rem;
-                  height: 1rem;
+                & > li {
+                  opacity: 0;
+
+                  &:nth-child(1) {
+                    transition: 0.25s ease-in;
+                  }
+
+                  &:nth-child(2) {
+                    transition: 0.25s ease-in 0.1s;
+                  }
+
+                  &:nth-child(3) {
+                    transition: 0.25s ease-in 0.2s;
+                  }
+
+                  & > a {
+                    padding: 0.5rem 0.25rem;
+
+                    & > img {
+                      width: 1rem;
+                      height: 1rem;
+                      transform: scale(0.5);
+                      transition: 0.15s ease-in;
+
+                      &:hover {
+                        transform: translateY(-0.25rem);
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -511,15 +557,15 @@
   }
 }
 
+.headerMbFixed {
+  position: fixed !important;
+}
+
 .headerMbActive {
   & > a {
     color: #ffdc80 !important;
     font-family: 'Poppins-Bold' !important;
   }
-}
-
-.headerMbFixed {
-  position: fixed !important;
 }
 
 @keyframes slideInLeft {
