--- a/resources/sass/layouts/_ingredients.scss
+++ b/resources/sass/layouts/_ingredients.scss
@@ -22,7 +22,7 @@
           left: 50%;
           bottom: 0;
           z-index: -1;
-          content: "";
+          content: '';
           width: 175%;
           position: absolute;
           background-color: #ffdc80;
@@ -99,7 +99,7 @@
 
             & > p {
               @include fontStyles(
-                $family: "Poppins-Regular",
+                $family: 'Poppins-Regular',
                 $color: #3c3c46,
                 $size: 0.9375rem,
                 $height: 1.125rem,
@@ -118,7 +118,7 @@
           top: 0%;
           left: 50%;
           z-index: -1;
-          content: "";
+          content: '';
           width: 200%;
           height: 100%;
           position: absolute;
@@ -191,8 +191,12 @@
               margin: 0 auto 1.375rem;
               padding: 0.75rem 1.5rem;
               border-radius: 1.71875rem;
+              transition: 0.15s ease-in;
               background-color: #005f9b;
               @include displayFlex($gap: 1.5rem, $align: center, $justify: center);
+              &:hover {
+                transform: translateY(-0.25rem);
+              }
 
               & > img {
                 width: 1.125rem;
@@ -200,14 +204,14 @@
               }
 
               & > span {
-                @include fontStyles($family: "Poppins-Bold", $color: #dcdcff, $size: 1.375rem, $height: 1.875rem);
+                @include fontStyles($family: 'Poppins-Bold', $color: #dcdcff, $size: 1.375rem, $height: 1.875rem);
               }
             }
 
             & > p {
               padding: 0 1.125rem;
               @include fontStyles(
-                $family: "Nunito-Medium",
+                $family: 'Nunito-Medium',
                 $color: var(--dark-light),
                 $size: 1.125rem,
                 $height: 1.5625rem
@@ -229,7 +233,7 @@
         & > h2 {
           padding-bottom: 0.125rem;
           @include fontStyles(
-            $family: "Poppins-Bold",
+            $family: 'Poppins-Bold',
             $color: var(--dark-light),
             $size: 6.25rem,
             $height: 6.875rem,
@@ -245,7 +249,7 @@
         & > span {
           padding-bottom: 4.1875rem;
           @include fontStyles(
-            $family: "Poppins-Regular",
+            $family: 'Poppins-Regular',
             $color: var(--dark-light),
             $size: 1.3125rem,
             $height: 1.875rem,
@@ -255,7 +259,7 @@
 
         & > p {
           @include fontStyles(
-            $family: "Poppins-Regular",
+            $family: 'Poppins-Regular',
             $color: var(--dark-light),
             $size: 1.6875rem,
             $height: 2.5rem,
@@ -271,7 +275,7 @@
   & > button::before {
     top: 50%;
     left: 50%;
-    content: "";
+    content: '';
     width: 6.25rem;
     height: 6.25rem;
     position: absolute;
