--- a/resources/sass/layouts/_viewmore.scss
+++ b/resources/sass/layouts/_viewmore.scss
@@ -1,6 +1,6 @@
-@import "../constants/mixins";
-@import "../constants/variables";
-@import "../constants/generics";
+@import '../constants/mixins';
+@import '../constants/variables';
+@import '../constants/generics';
 
 .view {
   z-index: 4;
@@ -28,7 +28,7 @@
         }
 
         & > h3 {
-          @include fontStyles($family: "Poppins-Regular", $color: var(--dark-light), $size: 1.75rem, $height: 2.5rem);
+          @include fontStyles($family: 'Poppins-Regular', $color: var(--dark-light), $size: 1.75rem, $height: 2.5rem);
         }
       }
 
@@ -50,7 +50,7 @@
             left: 0;
             width: 100%;
             z-index: -1;
-            content: "";
+            content: '';
             height: 77.5%;
             position: absolute;
             border-radius: 1.75rem;
@@ -62,7 +62,7 @@
             left: 0;
             width: 87.5%;
             z-index: -2;
-            content: "";
+            content: '';
             height: 100%;
             position: absolute;
             border-radius: 1.75rem;
@@ -70,7 +70,13 @@
           }
 
           & > a {
-            @include fontStyles($family: "Poppins-Bold", $color: #3c3c46, $size: 1.375rem, $height: 1.875rem);
+            width: 100%;
+            height: 100%;
+            transition: 0.15s ease-in;
+            @include fontStyles($family: 'Poppins-Bold', $color: #3c3c46, $size: 1.375rem, $height: 1.875rem);
+            &:hover {
+              transform: translateY(-0.25rem);
+            }
           }
         }
       }
