--- a/resources/sass/layouts/_wheretobuy.scss
+++ b/resources/sass/layouts/_wheretobuy.scss
@@ -66,12 +66,16 @@
           border-radius: 1rem;
           padding: 0.55rem 1rem;
           margin-bottom: 1.5625rem;
+          transition: 0.15s ease-in;
           background-color: #ffdc80;
           @include fontStyles($family: 'Poppins-Medium', $color: #3c3c46, $size: 0.9375rem, $align: center);
           @include lg {
             margin: 0 auto;
             text-align: center;
             margin-bottom: 1.5625rem;
+          }
+          &:hover {
+            transform: translateY(-0.25rem);
           }
         }
 
